# rust-wedding-rsvp

./: Cargo.toml  README.md  package-lock.json  package.json  serverless.yml
models/: Cargo.toml
models/src/: household.rs  lib.rs  person.rs  rsvp.rs
services/: Cargo.toml
services/src/: household.rs  lib.rs
world/: Cargo.toml
