[package]
name = "services"
version = "0.1.0"
authors = ["Blaine Price <1wbprice@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusoto_core = "0.43.0"
rusoto_dynamodb = "0.43.0"
uuid = { version = "0.8.1", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_dynamodb = "0.5.0"
serde_json = "1.0.53"
anyhow = "1.0"
models = { path = "../models" }